# mine-for-good

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
mine_for_good/: __init__.py  activity.py  config.py  main.py  miner.py  service.py  specs.py  ui.py
tests/: test_activity.py  test_config.py  test_main.py  test_miner.py  test_specs.py  test_ui.py
